src/App.css
@import url('https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Josefin+Sans&family=Lato&family=Metal+Mania&display=swap');

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

/* General Styling */
h1,
h2,
h3,
li {
  font-family: 'Josefin Sans', sans-serif;
}

p {
  font-family: 'Lato', sans-serif;
  font-size: 1.1em;
}
/* Navbar styling */
nav ul {
  font-size: 1.25em;
}

.flag {
  display: block;
  max-width: 100%;
  height: 2rem;
}


/* Rental Carousel styling */
.carous {
  position: relative;
  /* height: 100vh; */
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 5em;
  margin-bottom: 10em;
}

.right-arrow {
  position: absolute;
  top: 50%;
  right: 130px;
  color: #000;
  z-index: 10;
  cursor: pointer;
  user-select: none;
}

.left-arrow {
  position: absolute;
  top: 50%;
  left: 130px;
  color: #000;
  z-index: 10;
  cursor: pointer;
  user-select: none;
}

.slide {
  opacity: 0;
  transition-duration: 1s ease;
}

.slide.active {
  opacity: 1;
  transition-duration: 1s;
  transform: scale(1.08);
}
.carousel-indicator {
  margin-top: 100px;
  filter: invert(1);
  background: pink;
}

@media (min-width: 576px) {
  .slide.active img {
    width: auto !important;
    height: 400px;
    max-height: 400px;
  }
}

.rntlImg {
  height: 50%;
}

.carousel-caption {
  background-color: rgba(0, 0, 0, 0.5);
}

/* Scroll Indicator & styling */
.scroll {
  position: absolute;
  top: 90%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.scroll span {
  display: block;
  width: 20px;
  height: 20px;
  border-bottom: 1px solid lightblue;
  border-right: 1px solid lightblue;
  transform: rotate(45deg);
  margin: -10px;
  animation: animate 2s infinite;
}

.scroll span:nth-child(2) {
  animation-delay: -0.2s;
}

.scroll span:nth-child(3) {
  animation-delay: -0.4s;
}

@keyframes animate {
  0% {
    opacity: 0;
    transform: rotate(45deg) translate(-20px, -20px);
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: rotate(45deg) translate(20px, 20px);
  }
}

/* Tour card styling */

.card {
  border-radius: 4px;
  background: #fff;
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12), 0.3s box-shadow,
    0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
  padding: 14px 5px 18px 5px;
  /*cursor: pointer;*/
}

.tourCard:hover {
  transform: scale(1.01);
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
}

.metal {
  font-family: 'Metal Mania', serif;
}

/* Jumbotron styling */

.jumText {
  color: lightblue;
  text-shadow: 2px 2px darkgrey;
}

/* Homepage styling */

.testTitle {
  top: 50%;
  color: green;
  height: 55rem;
}
.title {
  font-size: 100px;
  position: absolute;
  left: 30%;
  top: 50%;
  width: 100%;
  text-align: center;
  color: lightblue;
  text-shadow: 2px 2px darkgray;
  opacity: 1;
}

.subtitle {
  position: absolute;
  left: 40%;
  top: 62%;
  width: 100%;
  text-align: center;
  color: lightblue;
}



/* My borders showing different div .col,
div[class^='col-'],
label[class^='col-'] {
  border: 1px solid red;
  margin: 2px;
}

.row {
  border: 3px solid blue;
  padding: 2px;
  margin: 5px;
}

.container {
  border: 3px solid green;
  padding: 2px;
  margin: 5px;
}

.media {
  border: 3px solid yellow;
  padding: 2px;
  margin: 5px;
}

.card {
  border: 3px solid purple;
  padding: 2px;
  margin: 5px;
} */

